<resources>
    <string name="app_name">Your Recipe Book</string>
    <string name="welcome_text">Welcome!</string>
    <string name="recipe">Recipe</string>
    <string name="login_failed_toast">SIGN IN FAILED!</string>
    <string name="passwords_no_match_toast">Passwords don\'t match</string>
    <string name="username_password_illegal_toast">Illegal username and password</string>
    <string name="username_illegal_toast">Illegal username</string>
    <string name="password_illegal_toast">Illegal password</string>
    <string name="password_change_fail_toast">Password change failed"</string>
    <string name="password_wrong_toast">Wrong password"</string>
    <string name="login_button">Sign in</string>
    <string name="logout_button">Sign out</string>
    <string name="register_button">Sign up</string>
    <string name="create_account_hyperlink_textview">Create account</string>
    <string name="add_recipe_button">Add recipe</string>
    <string name="upload_image_button">Upload image</string>
    <string name="save_recipe_button">SAVE</string>
    <string name="register_hyperlink_textview">Already have an account?</string>
    <string name="password_hint">Password</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="add_description">Description</string>
    <string name="todo_1">TODO</string>
    <string name="edit_recipe_view">Edit Recipe</string>
    <string name="username_register">Username</string>
    <string name="name_your_recipe">Name your recipe</string>
    <string name="about_us">About Us</string>
    <string name="max_length">20</string>>
    <string name="Exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_password_button">Change</string>
    <string name="delete_user">Delete User</string>
    <string name="recipe_list_textview">Recipe List</string>
    <string name="hrolfur">Hrólfur Júlíusson (hrolfur@hi.is)</string>
    <string name="isabella">Ísabella Montazeri (ism4@hi.is)</string>
    <string name="johann">Jóhann Karl Hirst (jkh13@hi.is)</string>
    <string name="ramon">Ramon de la Rosa (rdl2@hi.is)</string>
    <string name="skiptibord">Skiptiborð: 581-2345</string>
    <string name="opnunartimi">Opnunartími: kl. 08:00-16:00</string>
    <string name="team_1">Team 1</string>
    <string name="sort_az">Sort A to Z</string>
    <string name="sort_za">Sort Z to A</string>
    <string name="sort_new_old">Sort New to Old</string>
    <string name="sort_old_new">Sort Old to New</string>

</resources>