<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.EditActivity">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_your_recipe"
        android:textAlignment="viewStart"
        android:textColor="#4CAF50"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/view_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/tag"
        android:textAlignment="textStart"
        android:textColor="#4CAF50"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_tag"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/add_description"
        android:textColor="#4CAF50"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/title"
        android:maxLength="25"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/input_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_tag"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/tag"
        android:maxLength="25"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/input_description"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/view_description"
        android:layout_marginStart="-153dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/view_description"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="15"
        android:maxLines="100" />

    <ImageView
        android:id="@+id/view_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/input_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/change_image_button"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/cardview_light_background"
        android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#47AB11"
        android:text="@string/save_recipe_button" />

</RelativeLayout>