<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".DeleteUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="#48000000"
            android:maxLength="@string/max_length"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/delete_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="31dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/recipe_green"
            android:textColor="@color/white"
            android:text="Delete User" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="1878dp"
            android:text="Delete User"
            android:textSize="50sp"
            android:textStyle="bold" />






    </LinearLayout>



    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#47AB11"
            android:text="@string/edit_recipe_view" />

        <include
            layout="@layout/main_nav_drawer"/>


    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>